--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,28 @@
+.header{
+    background-color: #212529;
+    position:absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 10vh;
+}
+.nav li{
+    color: white;
+    list-style-type: none;
+    display: inline;
+ 
+}
+.nav a{
+    text-decoration: none;
+    list-style-type: none;
+    display: inline;
+    color: white;
+    padding-left: 10px;
+}
+.nav{
+    margin-top: 20px;
+}
+
 .p1{
 padding-left: 325px;
 }
