--- a/css/projectstlye.css
+++ b/css/projectstlye.css
@@ -37,5 +37,21 @@
 .col-lg-3{
     background-color: rgb(193, 193, 193);
 }
+input[type=text], select, checkbox {
+    width: 50%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+  }
+  input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+  }
+
+    
 
 
